@@ -347,6 +347,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Log views show message when no matches
 * Fix raw sitenotice display on database error
 * Fix autoconfirm check for old accounts
+* (bug 4368) Don't show useless empty preview on new section creation
 
 
 === Caveats ===
